@@ -1,10 +1,0 @@
-Click is a Python package for creating beautiful command line
-interfaces in a composable way with as little code as necessary.
-It's the "Command Line Interface Creation Kit".  It's highly
-configurable but comes with sensible defaults out of the box.
-
-It aims to make the process of writing command line tools quick
-and fun while also preventing any frustration caused by the inability
-to implement an intended CLI API.
-
-This package contains the last version supporting Python 2.
