@@ -1,56 +1,0 @@
-@comment $NetBSD: PLIST,v 1.1 2022/01/31 09:43:23 wiz Exp $
-${PYSITELIB}/${EGG_INFODIR}/PKG-INFO
-${PYSITELIB}/${EGG_INFODIR}/SOURCES.txt
-${PYSITELIB}/${EGG_INFODIR}/dependency_links.txt
-${PYSITELIB}/${EGG_INFODIR}/top_level.txt
-${PYSITELIB}/click/__init__.py
-${PYSITELIB}/click/__init__.pyc
-${PYSITELIB}/click/__init__.pyo
-${PYSITELIB}/click/_bashcomplete.py
-${PYSITELIB}/click/_bashcomplete.pyc
-${PYSITELIB}/click/_bashcomplete.pyo
-${PYSITELIB}/click/_compat.py
-${PYSITELIB}/click/_compat.pyc
-${PYSITELIB}/click/_compat.pyo
-${PYSITELIB}/click/_termui_impl.py
-${PYSITELIB}/click/_termui_impl.pyc
-${PYSITELIB}/click/_termui_impl.pyo
-${PYSITELIB}/click/_textwrap.py
-${PYSITELIB}/click/_textwrap.pyc
-${PYSITELIB}/click/_textwrap.pyo
-${PYSITELIB}/click/_unicodefun.py
-${PYSITELIB}/click/_unicodefun.pyc
-${PYSITELIB}/click/_unicodefun.pyo
-${PYSITELIB}/click/_winconsole.py
-${PYSITELIB}/click/_winconsole.pyc
-${PYSITELIB}/click/_winconsole.pyo
-${PYSITELIB}/click/core.py
-${PYSITELIB}/click/core.pyc
-${PYSITELIB}/click/core.pyo
-${PYSITELIB}/click/decorators.py
-${PYSITELIB}/click/decorators.pyc
-${PYSITELIB}/click/decorators.pyo
-${PYSITELIB}/click/exceptions.py
-${PYSITELIB}/click/exceptions.pyc
-${PYSITELIB}/click/exceptions.pyo
-${PYSITELIB}/click/formatting.py
-${PYSITELIB}/click/formatting.pyc
-${PYSITELIB}/click/formatting.pyo
-${PYSITELIB}/click/globals.py
-${PYSITELIB}/click/globals.pyc
-${PYSITELIB}/click/globals.pyo
-${PYSITELIB}/click/parser.py
-${PYSITELIB}/click/parser.pyc
-${PYSITELIB}/click/parser.pyo
-${PYSITELIB}/click/termui.py
-${PYSITELIB}/click/termui.pyc
-${PYSITELIB}/click/termui.pyo
-${PYSITELIB}/click/testing.py
-${PYSITELIB}/click/testing.pyc
-${PYSITELIB}/click/testing.pyo
-${PYSITELIB}/click/types.py
-${PYSITELIB}/click/types.pyc
-${PYSITELIB}/click/types.pyo
-${PYSITELIB}/click/utils.py
-${PYSITELIB}/click/utils.pyc
-${PYSITELIB}/click/utils.pyo
