@@ -1,5 +1,0 @@
-$NetBSD: distinfo,v 1.1 2022/01/31 09:43:23 wiz Exp $
-
-BLAKE2s (click-7.1.2.tar.gz) = c727d901b84722538430c19422b6f98b54d21cd49327f8e732d1501eab170b56
-SHA512 (click-7.1.2.tar.gz) = b9fba8a30f57e380a2005b45c4f37074a27637ace9e16fb0fb0cce88aac72cfa806eea2829dac665fe2b558b8753a40b811dbfcca94dfccf999ad494865d7888
-Size (click-7.1.2.tar.gz) = 297279 bytes
