@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2024,v 1.2907 2024/04/30 09:28:11 wiz Exp $
+$NetBSD: CHANGES-2024,v 1.2908 2024/04/30 09:29:15 wiz Exp $
 
 Changes to the packages collection and infrastructure in 2024:
 
@@ -4739,3 +4739,4 @@ Changes to the packages collection and infrastructure in 2024:
 	Removed devel/py27-babel [wiz 2024-04-30]
 	Updated devel/py-click-plugins to 1.1.1nb2 [wiz 2024-04-30]
 	Updated lang/py-spark-parser to 1.8.9nb2 [wiz 2024-04-30]
+	Removed devel/py-click7 [wiz 2024-04-30]
